<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="hello">Hello World</string>
    <string name="app_name">MiniChef</string>

	<string name="lblNome">Nome:</string>
	<string name="btnSalvar">Salvar</string>
	<string name="btnCancelar">Cancelar</string>
	
    <color name="holo_white">#ffffff</color>
    <color name="holo_black">#000000</color>
    <color name="holo_blue_light">#ff33b5e5</color>
    <color name="holo_green_light">#ff99cc00</color>
    <color name="holo_red_light">#ffff4444</color>
    <color name="holo_blue_dark">#ff0099cc</color>
    <color name="holo_green_dark">#ff669900</color>
    <color name="holo_red_dark">#ffcc0000</color>
    <color name="holo_purple">#ffaa66cc</color>
    <color name="holo_orange_light">#ffffbb33</color>
    <color name="holo_orange_dark">#ffff8800</color>
    <color name="holo_blue_bright">#ff00ddff</color>

    <string name="action_settings">Configuração</string>
    <string name="campo_obrigatorio">Campo de preenchimento obrigatório!</string>
    <string name="txt_splash">MiniChef</string>
    <string name="title_activity_splash">MiniChef</string>
    
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="informacoes">Informações</string>
    <string name="sair">Sair</string>
    <string name="menuBuscarReceita">Buscar receita</string>
    <string name="menuAddReceita">Adicionar receita</string>
    <string name="menuAtualizarBase">Atualizar base</string>
    
    <string name="lblAutor">Autor (seu apelido):</string>
    <string name="lblCategoria">Categorias:</string>
    <string name="lblTempoPreparo">Tempo de preparo (min):</string>
    <string name="lblFoto">Foto:</string>
    <string name="lblIngredientes">Ingredientes:</string>
    <string name="lblModoPreparo">Modo de preparo:</string>
    <string name="lblQuantidade">Quantidade:</string>
    <string name="lblUnidadeMedida">Unidade de medida:</string>
    
    <string name="exeIngrediente">Ex.: batata, cenoura, frango, ovo, alface...</string>
    <string name="exeUnidadeMedida">Ex.: unid, grama, kg, litro, xícara, colher...</string>
    
    <string name="consultar">Consultar</string>
    <string name="data">Data:</string>
    <string name="limpar">Limpar</string>
    <string name="enviar">Enviar</string>
    <string name="salvar">Salvar</string>
	<string name="voltar">Voltar</string>
    <string name="ler">Ler</string>
    <string name="gerarSurpresinha">Gerar Surpresinha</string>
    <string name="gerar">Gerar</string>
    
    <string name="txtCategoria">Categoria</string>
    <string name="lblMassas">Massas</string>
    <string name="lblLanches">Lanches</string>
    <string name="lblCarnes">Carnes</string>
    <string name="lblSaladas">Saladas</string>
    <string name="lblSopas">Sopas</string>
    <string name="lblPetiscos">Petiscos</string>
    <string name="lblSobremesas">Sobremesas</string>
    <string name="lblRefeicaoCompleta">Completos</string>
    <string name="btnMassas">Massas</string>
    <string name="btnLanches">Lanches</string>
    <string name="btnCarnes">Carnes</string>
    <string name="btnSaladas">Saladas</string>
    <string name="btnSopas">Sopas</string>
    <string name="btnPetiscos">Petiscos</string>
    <string name="btnSobremesas">Sobremesas</string>
    <string name="btnRefeicaoCompleta">Completos</string>
    <string name="btnFoto">Foto</string>
    
    <string name="sobreInformacoes">
App desenvolvido por: \n  • Flavio M. T. Ota \n  • Leandro de Freitas \n  • Rodrigo T. Y. Ota \n  • Wellington S. M. Santos\n
\nSobre o MiniChef: \nÉ um aplicativo para auxiliar as pessoas na cozinha de forma que apresente sugestões de receitas por categoria ou ingredientes, tendo com ênfase modificar o jeito como aplicativos de receitas auxiliam o cozinheiro.
    </string>
        
</resources>
