<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutReceita"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/lblAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/lblAutor"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:id="@+id/etAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="text" >
                <requestFocus />
            </EditText>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/lblCategoria"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <ListView
                android:id="@+id/lvCategorias"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="multipleChoice"
                android:clickable="true" >
            </ListView>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/lblTempoPreparo"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:id="@+id/etTempoPreparo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="number" >
            </EditText>


			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/lblFoto"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/btnTirarFoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnFoto" />
                <ImageView
                    android:id="@+id/ivFoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true" 
                    android:contentDescription="" />
            </LinearLayout>
            

            <LinearLayout
                android:id="@+id/layoutIngredientes"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/lblNome"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <EditText
                    android:id="@+id/etIngredienteNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/exeIngrediente"
                    android:inputType="text" >
                </EditText>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/lblQuantidade"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <EditText
                    android:id="@+id/etQuantidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number" >
                </EditText>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/lblUnidadeMedida"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <EditText
                    android:id="@+id/etUnidadeMedida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/exeUnidadeMedida"
                    android:inputType="text" >
                </EditText>

            </LinearLayout>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/lblModoPreparo"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:id="@+id/etDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="text" >
            </EditText>
            
            
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="0dip" >

        <Button
            android:id="@+id/btnSairReceita"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/voltar" />

        <Button
            android:id="@+id/btnEnviarReceita"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enviar" />
    </LinearLayout>

</LinearLayout>