<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradiente"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_blue"
            android:gravity="center" >

            <TextView
                android:id="@+id/txtCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCategoria"
                android:textColor="@color/holo_white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:orientation="horizontal">

            <Button
                android:id="@+id/id_massa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/img_btn_massa"
                android:text="@string/btnMassas"
                android:textColor="@color/holo_blue_light"
                android:textSize="15sp" />

            <Button
                android:id="@+id/id_lanche"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/img_btn_lanche"
                android:text="@string/btnLanches"
                android:textColor="@color/holo_blue_light"
                android:textSize="15sp"  />

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

            <Button
                android:id="@+id/id_carne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/img_btn_carne"
                android:text="@string/btnCarnes"
                android:textColor="@color/holo_blue_light"
                android:textSize="15sp"  />

            <Button
                android:id="@+id/id_salada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/img_btn_salada"
                android:text="@string/btnSaladas"
                android:textColor="@color/holo_blue_light"
                android:textSize="15sp"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/id_sopa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/img_btn_sopa"
                android:text="@string/btnSopas"
                android:textColor="@color/holo_blue_light"
                android:textSize="15sp"  />

            <Button
                android:id="@+id/id_petisco"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/img_btn_petisco"
                android:text="@string/btnPetiscos"
                android:textColor="@color/holo_blue_light"
                android:textSize="15sp"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/id_sobremesa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/img_btn_sobremesa"
                android:text="@string/btnSobremesas"
                android:textColor="@color/holo_blue_light"
                android:textSize="15sp"  />

            <Button
                android:id="@+id/id_refeicao_completa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/img_btn_refeicao_completa"
                android:text="@string/btnRefeicaoCompleta"
                android:textColor="@color/holo_blue_light"
                android:textSize="15sp"  />

        </LinearLayout>

	</LinearLayout>
</LinearLayout>